force-app/main/default/objects/GoogleAuthSetting__mdt/GoogleAuthSetting__mdt.object-meta.xml
<CustomObject>
    <description>Store Google Auth settings</description>
    <label>GoogleAuthSetting</label>
    <pluralLabel>GoogleAuthSettings</pluralLabel>
</CustomObject>