force-app/main/default/objects/GoogleAuthSetting__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>OAuth 2.0 Client ID  from Google Cloud console</description>
    <label>Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>