force-app/main/default/objects/GoogleAuthSetting__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>OAuth 2.0 Client Secret ID from Google Cloud console</description>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>