force-app/main/default/objects/GoogleAuthSetting__mdt/fields/Doctor_email__c.field-meta.xml
<CustomField>
    <fullName>Doctor_email__c</fullName>
    <label>Doctor&apos;s email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>