force-app/main/default/objects/GoogleAuthSetting__mdt/fields/RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken__c</fullName>
    <label>RefreshToken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>